# ChangeLog for x11-misc/pcmanfm
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/pcmanfm/ChangeLog,v 1.57 2011/06/14 09:15:05 hwoarang Exp $

*pcmanfm-0.9.9_pre20110614 (14 Jun 2011)

  14 Jun 2011; Markos Chandras <hwoarang@gentoo.org>
  +pcmanfm-0.9.9_pre20110614.ebuild:
  New snapshot

  02 Jun 2011; Markus Meier <maekke@gentoo.org>
  pcmanfm-0.9.9_pre20110422.ebuild:
  arm stable, bug #365231

  01 Jun 2011; Tobias Klausmann <klausman@gentoo.org>
  pcmanfm-0.9.9_pre20110422.ebuild:
  Keyworded on alpha, bug #330911

  25 May 2011; Thomas Kahle <tomka@gentoo.org>
  pcmanfm-0.9.9_pre20110422.ebuild:
  x86 stable per bug 365231

  29 Apr 2011; Markos Chandras <hwoarang@gentoo.org>
  pcmanfm-0.9.9_pre20110422.ebuild:
  Stable on amd64 wrt bug #365231

*pcmanfm-0.9.9_pre20110422 (22 Apr 2011)

  22 Apr 2011; Markos Chandras <hwoarang@gentoo.org>
  -pcmanfm-0.9.9_pre20110216-r1.ebuild, +pcmanfm-0.9.9_pre20110422.ebuild:
  Automated version bump. Remove old snapshots

*pcmanfm-0.9.9_pre20110216-r1 (09 Mar 2011)

  09 Mar 2011; Markos Chandras <hwoarang@gentoo.org>
  -pcmanfm-0.9.9_pre20110216.ebuild, +pcmanfm-0.9.9_pre20110216-r1.ebuild:
  Fix tests. Bug 357125. Thanks to Diego Elio Pettenò. Remove deprecated
  x-directory entry from desktop file

  07 Mar 2011; Tobias Klausmann <klausman@gentoo.org> pcmanfm-0.9.7-r2.ebuild:
  Keyworded on alpha, bug #330911

  22 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
  pcmanfm-0.9.9_pre20110216.ebuild, pcmanfm-9999.ebuild:
  Fix gtk+ dependencies. Bug #355761

*pcmanfm-0.9.9_pre20110216 (16 Feb 2011)

  16 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
  -pcmanfm-0.9.9_pre20110213.ebuild, +pcmanfm-0.9.9_pre20110216.ebuild:
  Automated version bump. Remove old snapshots

*pcmanfm-0.9.9_pre20110213 (13 Feb 2011)

  13 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
  -pcmanfm-0.9.9_pre20110202.ebuild, +pcmanfm-0.9.9_pre20110213.ebuild: