@@ -1,6 +1,11 @@
 # ChangeLog for x11-misc/pcmanfm
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/pcmanfm/ChangeLog,v 1.57 2011/06/14 09:15:05 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/pcmanfm/ChangeLog,v 1.58 2011/06/25 18:19:04 hwoarang Exp $
+
+  25 Jun 2011; Markos Chandras <hwoarang@gentoo.org>
+  pcmanfm-0.9.9_pre20110422.ebuild, pcmanfm-0.9.9_pre20110614.ebuild,
+  pcmanfm-9999.ebuild:
+  migrate to git-2. Touch non-live ebuilds to silence repoman
 
 *pcmanfm-0.9.9_pre20110614 (14 Jun 2011)
 
